--- a/style.css
+++ b/style.css
@@ -1,9 +1,158 @@
-footer > .attribution {
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap");
+:root {
+  --very-dark-grayish-blue: hsl(217, 19%, 35%);
+  --desaturated-dark-blue: hsl(214, 17%, 51%);
+  --grayish-blue: hsl(212, 23%, 69%);
+  --light-grayish-blue: hsl(210, 46%, 95%);
+}
+
+* {
+  font-family: "Manrope", sans-serif;
+  font-size: 13px;
+}
+
+body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: var(--light-grayish-blue);
+  height: 100vh;
+}
+
+body > main {
+  height: 270px;
+  width: 720px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 2rem;
+  background-color: white;
+  border-radius: 1rem;
+  overflow: hidden;
+}
+
+body > main > img {
+  width: 315px;
+  height: 270px;
+}
+
+body > main > .right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 1rem;
+}
+
+body > main > .right > h1 {
+  font-size: 1.5rem;
+  color: var(--very-dark-grayish-blue);
+}
+
+body > main > .right > .bigger {
+  margin-top: -5px;
+  color: var(--grayish-blue);
+}
+
+body > main > .right > .flex {
+  margin-top: 0.4rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 1.7rem;
+  position: relative;
+}
+
+body > main > .right > .flex > .avatar {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+}
+
+body > main > .right > .flex > .column > h2 {
+  color: var(--very-dark-grayish-blue);
+}
+
+body > main > .right > .flex > .column .smaller {
+  margin-top: -0.7rem;
+  color: var(--grayish-blue);
+}
+
+body > main > .right > .flex .share-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 30px;
+  height: 30px;
+  background: var(--light-grayish-blue);
+  border-radius: 50%;
+  cursor: pointer;
+  position: relative;
+}
+
+body > main > .right > .flex .share-wrapper > .share_bubble {
+  display: none;
+  position: absolute;
+  top: -70px;
+  border-radius: 10px;
+  width: 250px;
+  background-color: var(--very-dark-grayish-blue);
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+body > main > .right > .flex .share-wrapper > .share_bubble > p {
+  letter-spacing: 5px;
+  color: var(--desaturated-dark-blue);
+}
+
+body > main > .right > .flex .share-wrapper > .share_bubble.active {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+body > main > .right > .flex .share-wrapper > .bubble-bottom-center:after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 10px solid #48556a;
+  bottom: -10px;
+}
+
+body > footer > .attribution {
   font-size: 11px;
   text-align: center;
 }
 
-footer > .attribution a {
+body > footer > .attribution a {
   color: #3e52a3;
 }
 /*# sourceMappingURL=style.css.map */
