--- a/style.css
+++ b/style.css
@@ -158,16 +158,14 @@ body > main > .right > .flex > .share-wrapper:hover {
   transition: all 0.3s ease;
 }
 
-body > footer {
-  font-size: 10px;
-}
-
 body > footer > .attribution {
   text-align: center;
+  font-size: 10px;
 }
 
 body > footer > .attribution a {
   color: #3e52a3;
+  font-size: 10px;
 }
 
 @media only screen and (max-width: 450px) {
@@ -179,8 +177,13 @@ body > footer > .attribution a {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     height: 100%;
-    width: 100%;
   }
   body > main {
     display: -webkit-box;
@@ -196,16 +199,34 @@ body > footer > .attribution a {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    height: 100%;
-    width: 99%;
+    height: 99%;
+    max-width: 315px;
+    overflow: hidden;
   }
-  body > main > img {
-    max-height: 100%;
-    max-width: 100%;
+  body > main > .photo_left {
+    max-width: 315px;
+    max-height: 300px;
+    margin-top: -50px;
   }
   body > main > .right {
     max-width: 100%;
     max-height: 100%;
+    margin-top: -20px;
+    padding: 1.3rem;
+    padding-top: 0;
+    /*  > .share-wrapper {
+          position: relative;
+          left: 20px;
+          top: 15px;
+        } */
+  }
+  body > main > .right > h1 {
+    font-size: 1.4rem;
+  }
+  body > main > .right > .flex {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
   }
 }
 /*# sourceMappingURL=style.css.map */
