--- a/style.scss
+++ b/style.scss
@@ -11,6 +11,7 @@
   font-family: "Manrope", sans-serif;
   font-size: 13px;
 }
+
 body {
   display: flex;
   flex-direction: column;
@@ -18,7 +19,6 @@ body {
   align-items: center;
   background-color: var(--light-grayish-blue);
   height: 100vh;
-
   > main {
     height: 270px;
     width: 720px;
@@ -34,7 +34,6 @@ body {
       display: flex;
       flex-direction: column;
       padding: 1rem;
-
       > h1 {
         font-size: 1.5rem;
         color: var(--very-dark-grayish-blue);
@@ -114,12 +113,13 @@ body {
     }
   }
   > footer {
-    font-size: 10px;
     > .attribution {
       text-align: center;
+      font-size: 10px;
     }
     > .attribution a {
       color: hsl(228, 45%, 44%);
+      font-size: 10px;
     }
   }
 }
@@ -128,22 +128,40 @@ body {
   body {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
     height: 100%;
-    width: 100%;
+    // width: 90%;
     > main {
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      height: 100%;
-      width: 99%;
-      > img {
-        max-height: 100%;
-        max-width: 100%;
+      height: 99%;
+      max-width: 315px;
+      overflow: hidden;
+      > .photo_left {
+        max-width: 315px;
+        max-height: 300px;
+        margin-top: -50px;
       }
       > .right {
         max-width: 100%;
         max-height: 100%;
+        margin-top: -20px;
+        padding: 1.3rem;
+        padding-top: 0;
+        > h1 {
+          font-size: 1.4rem;
+        }
+        /*  > .share-wrapper {
+          position: relative;
+          left: 20px;
+          top: 15px;
+        } */
+        > .flex {
+          display: flex;
+        }
       }
     }
   }
