--- a/style.scss
+++ b/style.scss
@@ -26,6 +26,7 @@ body {
     gap: 2rem;
     background-color: white;
     border-radius: 1rem;
+    overflow: hidden;
     > img {
       width: 315px;
       height: 270px;
@@ -104,10 +105,11 @@ body {
         }
         > .icon-share:hover {
           background-color: var(--light-grayish-blue);
+          transition-delay: all 1s ease-in;
         }
         > .share-wrapper:hover {
           background-color: var(--very-dark-grayish-blue);
-          transition: all 0.3s ease;
+          transition-delay: all 4s ease-in;
         }
       }
     }
@@ -116,9 +118,9 @@ body {
     > .attribution {
       text-align: center;
       font-size: 10px;
+      color: hsl(228, 45%, 44%);
     }
     > .attribution a {
-      color: hsl(228, 45%, 44%);
       font-size: 10px;
     }
   }
@@ -126,18 +128,17 @@ body {
 
 @media only screen and (max-width: 450px) {
   body {
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100%;
-    // width: 90%;
     > main {
+      height: 100%;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      height: 99%;
       max-width: 315px;
       overflow: hidden;
       > .photo_left {
@@ -146,21 +147,30 @@ body {
         margin-top: -50px;
       }
       > .right {
-        max-width: 100%;
-        max-height: 100%;
         margin-top: -20px;
         padding: 1.3rem;
         padding-top: 0;
         > h1 {
           font-size: 1.4rem;
         }
-        /*  > .share-wrapper {
-          position: relative;
-          left: 20px;
-          top: 15px;
-        } */
         > .flex {
+          box-sizing: border-box;
           display: flex;
+          gap: 0;
+          > .avatar {
+            margin-right: 1.5rem;
+          }
+          > .share-wrapper {
+            margin-left: -2rem;
+            .bubble-bottom-center:after {
+              content: "";
+              //display: block;
+              position: absolute;
+              max-width: 315px;
+              max-height: 300px;
+              margin: 0 auto;
+            }
+          }
         }
       }
     }
