--- a/style.scss
+++ b/style.scss
@@ -162,13 +162,15 @@ body {
           }
           > .share-wrapper {
             margin-left: -2rem;
+
             .bubble-bottom-center:after {
               content: "";
               //display: block;
               position: absolute;
-              max-width: 315px;
-              max-height: 300px;
-              margin: 0 auto;
+              min-width: 315px;
+              min-height: 100px;
+              position: relative;
+              bottom: 0px;
             }
           }
         }
